# SimpleGraphicsGamePlay

./: .gitignore  CMakeLists.txt  README.md
Code/: MainGame.cpp  MainGame.h  Sprite.cpp  Sprite.h  main.cpp
Code/Utils/: Logger.cpp  Logger.h  SDLWrapper.cpp  SDLWrapper.h
Dependencies/Includes/glad/: glad.h
Dependencies/Lib/: glad.cpp
